--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,7 @@
 idf_component_register(
-    SRCS "web_server.c" "main.c"
+    SRCS
+    "web_server.c"
+    "main.c"
+    "flip_dot_driver.c"
     INCLUDE_DIRS ""
 )
